--- a/report_data_semantics/main.tex
+++ b/report_data_semantics/main.tex
@@ -8,6 +8,8 @@
 
 % Margini (4cm a sx, 2.5cm a dx, 2.5cm in alto, 2.5cm in basso)
 \usepackage[top=2cm, bottom=2cm, left=1.5cm, right=1.5cm, centering]{geometry}
+\usepackage{wrapfig}
+
 
 % Per la stampa fronte-retro sostituire con: 
 % \usepackage[top=2.5cm, bottom=2.5cm, inner=4cm, outer=4cm, right=2.5cm, centering]{geometry}
