knn multiclass - final

--- a/code/knn_multiclass - final.ipynb
+++ b/code/knn_multiclass - final.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 194,
    "id": "fa92ac7c",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 195,
    "id": "aa3737f0",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 196,
    "id": "f5c69acc",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 197,
    "id": "764650c0",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 198,
    "id": "7b99ced0",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
        " 'video': 7}"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 199,
    "id": "056ab5ef",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 200,
    "id": "514adda3",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 201,
    "id": "1fc70b52",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,9 @@
     "# Lista completa delle feature nel giusto ordine\n",
     "features = [\n",
     "    'startYear',\n",
-    "    'numVotes', 'totalNominations', 'totalMedia', \n",
+    "    'numVotes', \n",
+    "    'totalNominations', \n",
+    "    'totalMedia', \n",
     "    'totalCredits', 'criticReviewsTotal', \n",
     "    'numRegions', 'userReviewsTotal', \n",
     "    'runtimeMinutes_notitletype',\n",
@@ -231,7 +233,9 @@
     "\n",
     "# Variabili da log trasformare\n",
     "log_transform_cols = [ \n",
-    "    'numVotes', 'totalNominations', 'totalMedia', \n",
+    "    'numVotes', \n",
+    "    'totalNominations', \n",
+    "    'totalMedia', \n",
     "    'totalCredits', 'criticReviewsTotal', \n",
     "    'numRegions', 'userReviewsTotal'\n",
     "]\n",
@@ -239,7 +243,9 @@
     "# Variabili da scalare\n",
     "scale_cols = [\n",
     "    'startYear',\n",
-    "    'numVotes', 'totalNominations', 'totalMedia', \n",
+    "    'numVotes', \n",
+    "    'totalNominations', \n",
+    "    'totalMedia', \n",
     "    'totalCredits', 'criticReviewsTotal', \n",
     "    'numRegions', 'userReviewsTotal', \n",
     "    'runtimeMinutes_notitletype',\n",
@@ -286,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 202,
    "id": "6dc93e09",
    "metadata": {},
    "outputs": [],
@@ -344,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 203,
    "id": "cdd80650",
    "metadata": {},
    "outputs": [],
@@ -364,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 204,
    "id": "7059a704",
    "metadata": {},
    "outputs": [],
@@ -385,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 205,
    "id": "f07980d8",
    "metadata": {},
    "outputs": [
@@ -476,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 206,
    "id": "c881549f",
    "metadata": {},
    "outputs": [
@@ -526,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 207,
    "id": "320338d9",
    "metadata": {},
    "outputs": [
@@ -552,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 208,
    "id": "3a5358ba",
    "metadata": {},
    "outputs": [
@@ -584,46 +590,37 @@
    "id": "421af60d",
    "metadata": {},
    "source": [
-    "### Concatenation of train & validation before testing on the test set"
+    "### Final step: training on the whole dataset and testing on the test set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 209,
    "id": "a3cb4464",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-2 {color: black;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier(metric=&#x27;cityblock&#x27;, n_neighbors=12)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">KNeighborsClassifier</label><div class=\"sk-toggleable__content\"><pre>KNeighborsClassifier(metric=&#x27;cityblock&#x27;, n_neighbors=12)</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-7 {color: black;}#sk-container-id-7 pre{padding: 0;}#sk-container-id-7 div.sk-toggleable {background-color: white;}#sk-container-id-7 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-7 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-7 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-7 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-7 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-7 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-7 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-7 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-7 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-7 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-7 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-7 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-7 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-7 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-7 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-7 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-7 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-7 div.sk-item {position: relative;z-index: 1;}#sk-container-id-7 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-7 div.sk-item::before, #sk-container-id-7 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-7 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-7 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-7 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-7 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-7 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-7 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-7 div.sk-label-container {text-align: center;}#sk-container-id-7 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-7 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-7\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier(metric=&#x27;cityblock&#x27;, n_neighbors=12)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-7\" type=\"checkbox\" checked><label for=\"sk-estimator-id-7\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">KNeighborsClassifier</label><div class=\"sk-toggleable__content\"><pre>KNeighborsClassifier(metric=&#x27;cityblock&#x27;, n_neighbors=12)</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "KNeighborsClassifier(metric='cityblock', n_neighbors=12)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Addestra il modello finale con i migliori parametri trovati\n",
     "final_model = KNeighborsClassifier(weights = 'uniform', n_neighbors= 12, metric = 'cityblock')\n",
     "final_model.fit(X_train_temp, y_train)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1e5b371f",
-   "metadata": {},
-   "source": [
-    "### Testing on the test set"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 210,
    "id": "e19f3231",
    "metadata": {},
    "outputs": [],
@@ -633,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 211,
    "id": "0aa2d500",
    "metadata": {},
    "outputs": [
@@ -718,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 212,
    "id": "ca886fe2",
    "metadata": {},
    "outputs": [
@@ -768,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 213,
    "id": "16c92b7a",
    "metadata": {},
    "outputs": [
