--- a/report_data_semantics/capitolo3.tex
+++ b/report_data_semantics/capitolo3.tex
@@ -61,7 +61,7 @@ Table~\ref{tab:binary_classification_report}.
         As can be seen, a significant number of \textit{High Engagement} records was misclassified,
         leading to a low Recall.
         This might be a consequence of class imbalance, as well as the possible presence
-        of noise in the data.
+        of noise in the data. It's also possible that the two classes are not well separated.
     \end{minipage}
     \hfill
     \begin{minipage}{0.38\textwidth}
