--- a/report_data_semantics/capitolo1.tex
+++ b/report_data_semantics/capitolo1.tex
@@ -345,7 +345,8 @@ Some features showed a heavy right-skewed distribution, with typical traits of P
 \end{figure}
 
 The decay of these features is exponential in linear space (~\ref{fig:sub1_KDE_left_skew}), while in logarithmic space there is a decline that can be approximated to a linear trend (~\ref{fig:sub2_KDE_left_skew}). 
-For this reason, a log-transformation was applied to these attributes to reduce the skewness and make them more suitable for analysis.
+For this reason, when needed, a log-transformation was applied to these attributes to reduce the skewness and make
+them more suitable for some specific analysis.
 Because of right-skewness (without a power-law distribution), other attributes were also log-transformed:
 \begin{itemize}
     \item \texttt{numVotes};
